[package]
name = "nparse"
version = "0.0.2"
authors = ["Marirs <marirs@gmail.com"]
categories = ["parser-implementations", "parsing"]
exclude = [
    "data",
    ".gitignore",
    ".idea",
    ".travis"
]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.1"
serde_json = { version = "1.0", features = ["preserve_order"] }

[lib]
name = "nparse"
path = "src/lib.rs"
